k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rom-catalog-api
  namespace: rom-catalog
  labels:
    app.kubernetes.io/name: rom-catalog-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rom-catalog-api
  ports:
    - name: http
      port: 80
      targetPort: http
